@@ -7,9 +7,9 @@ import com.ra.base_spring_boot.model.Genre;
 import com.ra.base_spring_boot.model.Song;
 import com.ra.base_spring_boot.model.SongDeleteHistory;
 import com.ra.base_spring_boot.model.User;
+import com.ra.base_spring_boot.repository.ISongDeleteHistoryRepo;
 import com.ra.base_spring_boot.repository.ISongRepository;
 import com.ra.base_spring_boot.repository.IUserRepository;
-import com.ra.base_spring_boot.repository.SongDeleteHistoryRepo;
 import com.ra.base_spring_boot.services.ISongService;
 import com.ra.base_spring_boot.services.IUserService;
 import com.ra.base_spring_boot.services.MailService;
@@ -22,6 +22,7 @@ import org.springframework.mail.javamail.JavaMailSenderImpl;
 import org.springframework.mail.javamail.MimeMessageHelper;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -32,7 +33,7 @@ public class SongServiceImpl implements ISongService {
     private final ISongRepository songRepository;
     private final IUserRepository userRepository;
     private final MailService mailService;
-    private final SongDeleteHistoryRepo songDeleteHistoryRepo;
+    private final ISongDeleteHistoryRepo songDeleteHistoryRepo;
 
     @Override
     public List<TopSongOfWeek> getTop15SongsOfWeek() {
@@ -47,44 +48,13 @@ public class SongServiceImpl implements ISongService {
         return songRepository.findTopSongsAllTime(pageable);
     }
 
-    @Override
-    public List<TrendingSongResponseDTO> getTrendingSongs(LocalDateTime fromTime, int limit) {
-        List<Object[]> results = songRepository.findTrendingSongs(fromTime, limit);
-
-        return results.stream().map(r -> {
-            Long playCount = ((Number) r[3]).longValue();
-            Long uniqueListeners = ((Number) r[4]).longValue();
-            Long positiveReactions = r[5] == null ? 0L : ((Number) r[5]).longValue();
-            Long negativeReactions = r[6] == null ? 0L : ((Number) r[6]).longValue();
-            Long downloadCount = r[7] == null ? 0L : ((Number) r[7]).longValue();
-            Long playlistAddCount = r[8] == null ? 0L : ((Number) r[8]).longValue();
-            Long commentCount = r[9] == null ? 0L : ((Number) r[9]).longValue();
-
-            User foundArtist = userRepository.findById(((Number) r[2]).longValue())
-                    .orElseThrow(() -> new HttpNotFound("Artist not found"));
-
-            double score = playCount * 1.0
-                    + uniqueListeners * 1.5
-                    + positiveReactions * 2
-                    - negativeReactions * 1.5
-                    + downloadCount * 2
-                    + playlistAddCount * 3
-                    + commentCount * 1.0;
-
-            return TrendingSongResponseDTO.builder()
-                    .songId(((Number) r[0]).longValue())
-                    .title((String) r[1])
-                    .artistName(foundArtist.getFirstName() + " " + foundArtist.getLastName())
-                    .playCount(playCount)
-                    .uniqueListeners(uniqueListeners)
-                    .positiveReactions(positiveReactions)
-                    .negativeReactions(negativeReactions)
-                    .downloadCount(downloadCount)
-                    .playlistAddCount(playlistAddCount)
-                    .commentCount(commentCount)
-                    .trendingScore(score)
-                    .build();
-        }).collect(Collectors.toList());
+    public List<TopSongDTO> getTrendingSongsThisMonth(int limit) {
+        LocalDateTime start = LocalDate.now().withDayOfMonth(1).atStartOfDay();
+        LocalDateTime end = start.plusMonths(1);
+        return songRepository.findTrendingSongs(start, end)
+                .stream()
+                .limit(limit)
+                .toList();
     }
 
     @Override
